Describe bien los cambios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=Moviles-Back
-spring.datasource.url=jdbc:postgresql://switchyard.proxy.rlwy.net:15628/railway
+
+spring.datasource.url=jdbc:postgresql://yamabiko.proxy.rlwy.net:49278/railway
 spring.datasource.username=postgres
-spring.datasource.password=ZAslofQxrfWpikBNdKcloryzFVfNKvaZ
+spring.datasource.password=WPmvBWaLiWbBhhzXyJVARUwJHtlHqzXc
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+server.port=${PORT:8080}
